<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="it.unipd.dei.esp1415.thetrumannshow.FallDetector.RunningSessionActivity">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_layout" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:id="@+id/session_icon"
                android:src="@mipmap/recording_icon" />

            <TextView
                android:id="@+id/session_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/session_icon"
                android:layout_toEndOf="@id/session_icon"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/edit_session_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/session_icon"
                android:layout_toEndOf="@id/session_icon"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toLeftOf="@+id/modify_session_name"
                android:layout_toStartOf="@+id/modify_session_name"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textSize="18sp"
                android:visibility="gone"
                android:selectAllOnFocus="true"
                android:inputType="text|textAutoCorrect|textCapSentences" />

            <ImageView
                android:id="@+id/modify_session_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/action_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout"
            android:textSize="24sp"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/session_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_time"
            android:textSize="24sp"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/live_data_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_data_header"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/session_duration"/>

        <LinearLayout
            android:id="@+id/live_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_below="@+id/live_data_header"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acc_x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/acc_y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_axis"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/acc_z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_axis"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/falls_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/live_data_container"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            android:text="@string/falls_list"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/falls_list_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/falls_header">

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>